--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,7 +10,7 @@ play.crypto.secret = "changeme"
 
 # The application languages
 # ~~~~~
-play.i18n.langs = [ "en" ]
+application.i18n.langs = [ "en" ]
 
 environment.user=${USERNAME}
 
